# areaAprox

./: .gitignore  CMakeLists.txt  README.md  areaApprox.sln  area_approx_config.h.in  main.c  main.h
areaApprox/: areaApprox.vcxproj  main.c
